fixed skills spacing on some smaller devices

--- a/css/about.css
+++ b/css/about.css
@@ -7,7 +7,7 @@
 
 .about-pic {
 	float: left;
-	margin: 3% 5px;
+	margin: 3% 15px;
 }
 
 .about-pic img {
