--- a/css/home.css
+++ b/css/home.css
@@ -20,7 +20,7 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
    /* margin-top: -25px;*/
-    padding-top: 180px;
+    padding-top: 210px;
 }
 
 #germany-text {
