--- a/css/skills.css
+++ b/css/skills.css
@@ -1,21 +1,23 @@
 .skills-section {
 	min-height: 550px;
+	height: auto;
 	background-color: #292728;
 	color: #FFFCED;
 	text-align: center;
-	padding: 3%;
+	padding: 5%;
 }
 
 .skills-section h3 {
 	font-size: 3em;
 	text-decoration: underline;
 	margin-top: -5px;
+	margin-bottom: 10px;
 }
 
 .skills-section .skills-list div {
 	display: inline-block;
-	margin: 4% 5%;
 	font-size: 2em;
+	margin-top: 20px;
 }
 
 .skills-section .skills-list div img {
@@ -23,7 +25,7 @@
 	width: 100px;
 }
 
-#wide {
-	height: 80px;
-	width: 125px;
+.sql {
+	height: 75px;
+	width: 110px;
 }
